tests/ui/invalid-field-name.stderr
error: Invalid field '__name': fields must not be prefixed with __
 --> tests/ui/invalid-field-name.rs
  |
  |     __name: String
  |     ^^^^^^^^^^^^^^
